fix: css align

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   background-image: url("https://wallpapercave.com/wp/wp4097162.jpg");
   background-size: cover;
